# tcp-echo

./: CMakeLists.txt  README.md  docker-compose.yml
apps/client/: CMakeLists.txt
apps/client/src/: client.cpp  main.cpp  strategies.cpp
apps/server/: CMakeLists.txt
apps/server/src/: handlers.cpp  main.cpp
docker/: Dockerfile
lib/: CMakeLists.txt
lib/include/tcp_echo/net/: Acceptor.h  Connection.h  ConnectionManager.hpp  Reactor.h  ServerCore.h  Socket.h  acceptor.hpp  connection.hpp  connection_manager.hpp  reactor.hpp  server_core.hpp  socket.hpp
lib/include/tcp_echo/proto/: FrameCodec.h  Messages.h  Protocol.h  frame_codec.hpp  messages.hpp  protocol.hpp
lib/include/tcp_echo/util/: Buffer.hpp  ByteOrder.hpp  Cipher.hpp  Config.h  Logger.hpp  Signal.h  Timer.hpp  byte_order.hpp  cipher.hpp  config.hpp  logger.hpp  signal.hpp
lib/net/: Acceptor.cpp  Connection.cpp  ReactorSelect.cpp  ServerCore.cpp  Socket.cpp  acceptor.cpp  connection.cpp  connection_manager.cpp  reactor_select.cpp  server_core.cpp  socket.cpp
lib/proto/: FrameCodec.cpp  Messages.cpp  frame_codec.cpp  messages.cpp  protocol.cpp
lib/util/: Cipher.cpp  Config.cpp  Signal.cpp  buffer.cpp  byte_order.cpp  cipher.cpp  config.cpp  signal.cpp  timer.cpp
scripts/: build.sh  integration-tests.sh  server_down.sh  server_up.sh  spawn_clients.sh  unit-tests.sh
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_ServerClientEcho.cpp
tests/unit/: CMakeLists.txt  test_ByteOrder.cpp  test_Cipher.cpp  test_ProtoCodec.cpp  test_Protocol.cpp
